--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load cache %}
+
 {% block title %}
   {{ object.title }}
 {% endblock title %}
@@ -27,11 +29,13 @@
     </ul>
   </div>
   <div class="module">
-    {% for content in module.contents.all %}
-      {% with content.item as item %}
-      <h2>{{ item.title }}</h2>
-      {{ item.render }}
-      {% endwith %}
-    {% endfor %}
+    {% cache 600 module_contents module %}
+      {% for content in module.contents.all %}
+        {% with content.item as item %}
+          <h2>{{ item.title }}</h2>
+          {{ item.render }}
+        {% endwith %}
+      {% endfor %}
+    {% endcache %}
   </div>
 {% endblock content %}
