chat functionality done

--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -38,4 +38,9 @@
       {% endfor %}
     {% endcache %}
   </div>
+  <h3>
+    <a href="{% url 'chat:course_chat_room' object.id %}">
+      Course chat room
+    </a>
+  </h3>
 {% endblock content %}
